<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2012 Hai Bison

    See the file LICENSE at the root directory of this project for copying
    permission.
-->

<resources>

    <string name="afc_lib_name">android-filechooser</string>
    <string name="afc_cmd_add_to_bookmarks">Add to bookmarks…</string>
    <string name="afc_cmd_advanced_selection_all">All</string>
    <string name="afc_cmd_advanced_selection_invert">Invert selection</string>
    <string name="afc_cmd_advanced_selection_none">None</string>
    <string name="afc_cmd_clear">Clear</string>
    <string name="afc_cmd_grid_view">Grid view</string>
    <string name="afc_cmd_home">Home</string>
    <string name="afc_cmd_list_view">List view</string>
    <string name="afc_cmd_new_folder">New folder…</string>
    <string name="afc_cmd_reload">Reload</string>
    <string name="afc_cmd_remove_from_list">Remove from list</string>
    <string name="afc_cmd_rename">Rename</string>
    <string name="afc_cmd_select_all_files">Select all files</string>
    <string name="afc_cmd_select_all_folders">Select all folders</string>
    <string name="afc_cmd_sort">Sort…</string>
    <string name="afc_cmd_sort_by_name">Sort by name</string>
    <string name="afc_file">file</string>
    <string name="afc_folder">folder</string>
    <string name="afc_hint_clear">clear</string>
    <string name="afc_hint_double_tap_to_select_file">Double tap to select file/ folder</string>
    <string name="afc_hint_folder_name">folder name</string>
    <string name="afc_hint_new_name">new name</string>
    <string name="afc_hint_newer">newer</string>
    <string name="afc_hint_older">older</string>
    <string name="afc_hint_save_as_filename">filename</string>
    <string name="afc_hint_search">search</string>
    <string name="afc_history">History</string>
    <string name="afc_msg_app_doesnot_have_permission_to_create_files">This application does not have permission to create files/ folders</string>
    <string name="afc_msg_app_doesnot_have_permission_to_delete_files">This application does not have permission to delete files/ folders</string>
    <string name="afc_msg_bookmark_name_is_invalid">Bookmark name is invalid</string>
    <string name="afc_msg_cancelled">Cancelled</string>
    <string name="afc_msg_cannot_connect_to_file_provider_service">Can not connect to file provider service</string>
    <string name="afc_msg_cannot_create_new_folder_here">Can not create new folder here</string>
    <string name="afc_msg_cannot_save_a_file_here">Can not save a file here</string>
    <string name="afc_msg_confirm_clear_all_bookmarks">Do you really want to clear all bookmarks?</string>
    <string name="afc_msg_confirm_clear_history">Are you sure you want to clear history?</string>
    <string name="afc_msg_done">Done</string>
    <string name="afc_msg_empty">…empty</string>
    <string name="afc_msg_failed_please_try_again">Failed. Please try again.</string>
    <string name="afc_msg_filename_is_empty">Filename is empty</string>
    <string name="afc_msg_loading">Loading…</string>
    <string name="afc_phone">Phone</string>
    <string name="afc_pmsg_cannot_access_dir">Can not access \"%1$s\"</string>
    <string name="afc_pmsg_cannot_create_folder">Can not create folder \"%1$s\"</string>
    <string name="afc_pmsg_cannot_delete_file">Can not delete %1$s \"%2$s\"</string>
    <string name="afc_pmsg_confirm_delete_file">Are you sure you want to delete this %1$s \"%2$s\"?</string>
    <string name="afc_pmsg_confirm_replace_file">This file \"%1$s\" already exists.\n\nDo you want to replace it?</string>
    <string name="afc_pmsg_deleting_file">Deleting %1$s \"%2$s\"…</string>
    <string name="afc_pmsg_file_has_been_deleted">%1$s \"%2$s\" has been deleted</string>
    <string name="afc_pmsg_filename_is_directory">\"%1$s\" is a folder</string>
    <string name="afc_pmsg_filename_is_invalid">File name \"%1$s\" is invalid</string>
    <string name="afc_pmsg_max_file_count_allowed">…has more files, max allowed: %1$,d</string>
    <string name="afc_pmsg_unknown_error">Unknown error: %1$s</string>
    <string name="afc_pmsg_xxx_items">%1$,d items</string>
    <string name="afc_root">Root</string>
    <string name="afc_title_advanced_selection">Select…</string>
    <string name="afc_title_alert">Alert</string>
    <string name="afc_title_bookmark_manager">Bookmark manager</string>
    <string name="afc_title_bookmarks">Bookmarks</string>
    <string name="afc_title_choose_directories">Choose folders…</string>
    <string name="afc_title_choose_files">Choose files…</string>
    <string name="afc_title_choose_files_and_directories">Choose files/ folders…</string>
    <string name="afc_title_confirmation">Confirmation</string>
    <string name="afc_title_date">Date</string>
    <string name="afc_title_error">Error</string>
    <string name="afc_title_history">History</string>
    <string name="afc_title_info">Info</string>
    <string name="afc_title_name">Name</string>
    <string name="afc_title_new_bookmark">New bookmark</string>
    <string name="afc_title_rename">Rename…</string>
    <string name="afc_title_save_as">Save as…</string>
    <string name="afc_title_size">Size</string>
    <string name="afc_title_sort_by">Sort by…</string>
    <string name="afc_today">Today</string>
    <string name="afc_yesterday">Yesterday</string>

</resources>