<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2012 Hai Bison

    See the file LICENSE at the root directory of this project for copying
    permission.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/afc_menuitem_bookmarks"
        android:icon="@drawable/afc_ic_menu_bookmarks"
        android:showAsAction="ifRoom"
        android:title="@string/afc_title_bookmarks"/>
    <item
        android:id="@+id/afc_menuitem_home"
        android:icon="@drawable/afc_ic_menu_home"
        android:showAsAction="ifRoom"
        android:title="@string/afc_cmd_home"/>
    <item
        android:id="@+id/afc_menuitem_reload"
        android:icon="@drawable/afc_ic_menu_reload"
        android:showAsAction="ifRoom"
        android:title="@string/afc_cmd_reload"/>
    <item
        android:id="@+id/afc_menuitem_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:showAsAction="ifRoom"
        android:title="@string/afc_history"/>
    <item
        android:id="@+id/afc_menuitem_sort"
        android:showAsAction="ifRoom"
        android:title="@string/afc_cmd_sort"/>
    <item
        android:id="@+id/afc_menuitem_switch_viewmode"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/afc_menuitem_new_folder"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/afc_cmd_new_folder"/>

</menu>