<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:stretchColumns="0" >

    <TableRow
        android:layout_marginLeft="@dimen/afc_dim_5dp"
        android:layout_marginRight="@dimen/afc_dim_5dp" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/afc_title_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/afc_settings_sort_view_button_sort_by_name_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableRight="@drawable/afc_ic_menu_sort_by_name_asc" />

        <Button
            android:id="@+id/afc_settings_sort_view_button_sort_by_name_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/afc_dim_15dp"
            android:drawableRight="@drawable/afc_ic_menu_sort_by_name_desc" />
    </TableRow>

    <TableRow
        android:layout_marginLeft="@dimen/afc_dim_5dp"
        android:layout_marginRight="@dimen/afc_dim_5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/afc_title_size"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/afc_settings_sort_view_button_sort_by_size_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableRight="@drawable/afc_ic_menu_sort_by_size_asc" />

        <Button
            android:id="@+id/afc_settings_sort_view_button_sort_by_size_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/afc_dim_15dp"
            android:drawableRight="@drawable/afc_ic_menu_sort_by_size_desc" />
    </TableRow>

    <TableRow
        android:layout_marginLeft="@dimen/afc_dim_5dp"
        android:layout_marginRight="@dimen/afc_dim_5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/afc_title_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/afc_settings_sort_view_button_sort_by_date_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableRight="@drawable/afc_ic_menu_sort_by_date_asc" />

        <Button
            android:id="@+id/afc_settings_sort_view_button_sort_by_date_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/afc_dim_15dp"
            android:drawableRight="@drawable/afc_ic_menu_sort_by_date_desc" />
    </TableRow>

</TableLayout>